@@ -156,6 +156,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Visual FoxPro          Roberto Armellin
 - Visual Prolog          Thomas Linder Puls
 - Whitespace             Benny Baumann
+- Whois \ RPSL format    Benny Baumann
 - Winbatch               Craig Storey
 - X++                    Simon Butcher
 - Xorg config            Milian Wolff
