@@ -16,6 +16,7 @@ Version 1.0.8.4
   -  Added language files
      * FO (abas-ERP) (Tan-Vinh Nguyen)
      * Property Files (Edy Hinzen)
+     * Whois (RPSL format) entries (Benny Baumann)
   -  Changed INT_BASIC number format to allow numbers followed . at EOL (BenBE)
   -  Improvements to language files (BenBE)
      * Removed some superfluous keywords from ABAP (BenBE)
